sticky element fix

--- a/cases-item.html
+++ b/cases-item.html
@@ -22,22 +22,22 @@
         <div class="overflow-hidden bg-color-black">
             <div class="container-fluid">
                 <div class="row align-items-center">
-                    <div class="col-md-2 col-lg-4">
+                    <div class="col">
                         <div class="d-flex align-items-center justify-content-start">
-                            <img class="top-sale-image-1" src="img/sale-01.png" alt="">
-                            <img class="top-sale-image-2 d-none d-lg-block" src="img/sale-02.png" alt="">
+                            <img class="top-sale-image-1 d-none d-md-block" src="img/sale-01.png" alt="">
+                            <img class="top-sale-image-2 d-none d-xl-block" src="img/sale-02.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-8 col-lg-4">
-                        <div class="d-flex align-items-center justify-content-center py-1 py-md-2 py-lg-3">
-                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
+                    <div class="col-md-8 col-lg-6">
+                        <div class="d-flex align-items-center justify-content-center py-2 py-lg-3">
+                            <span class="fs-24 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
-                    <div class="col-md-2 col-lg-4">
+                    <div class="col">
                         <div class="d-flex align-items-center justify-content-end">
-                            <img class="top-sale-image-3 d-none d-lg-block" src="img/sale-03.png" alt="">
-                            <img class="top-sale-image-4" src="img/sale-04.png" alt="">
+                            <img class="top-sale-image-3 d-none d-xl-block" src="img/sale-03.png" alt="">
+                            <img class="top-sale-image-4 d-none d-md-block" src="img/sale-04.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="row gy-4 justify-content-between">
                     <div class="col-lg-4">
-                        <div class="sticky-top">
+                        <div class="sticky-top responsive-top">
                             <div class="mb-5">
                                 <p class="fs-20 fs-lg-24 fw-light mb-0">Клиент</p>
                                 <h1 class="h2 fw-bold">Интернет-магазин для продажи дров</h1>
