--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         <div class="overflow-hidden bg-color-black">
             <div class="container-fluid">
                 <div class="row align-items-center">
-                    <div class="col-md-2 col-lg-4">
+                    <div class="col">
                         <div class="d-flex align-items-center justify-content-start">
                             <img class="top-sale-image-1 d-none d-md-block" src="img/sale-01.png" alt="">
-                            <img class="top-sale-image-2 d-none d-lg-block" src="img/sale-02.png" alt="">
+                            <img class="top-sale-image-2 d-none d-xl-block" src="img/sale-02.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-8 col-lg-4">
+                    <div class="col-md-8 col-lg-6">
                         <div class="d-flex align-items-center justify-content-center py-2 py-lg-3">
-                            <span class="fs-28 fs-lg-32 text-uppercase color-white">Акции <span class="d-none d-md-inline">месяца!</span></span>
+                            <span class="fs-24 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
                             <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
                         </div>
                     </div>
-                    <div class="col-md-2 col-lg-4">
+                    <div class="col">
                         <div class="d-flex align-items-center justify-content-end">
-                            <img class="top-sale-image-3 d-none d-lg-block" src="img/sale-03.png" alt="">
+                            <img class="top-sale-image-3 d-none d-xl-block" src="img/sale-03.png" alt="">
                             <img class="top-sale-image-4 d-none d-md-block" src="img/sale-04.png" alt="">
                         </div>
                     </div>
@@ -327,38 +327,6 @@
         </section>
 
         <!-- CTA -->
-        <style>
-            .cta-promo {
-                position: relative;
-                border-radius: 40px;
-                overflow: hidden;
-            }
-            .cta-promo-img {
-                position: absolute;
-                top: 50%;
-                right: -150px;
-                transform: translateY(-40%);
-            }
-            @media (min-width: 768px) {
-                .cta-promo {
-                    overflow: visible;
-                }
-                .cta-promo-img {
-                    right: 16px;
-                }
-            }
-            @media (min-width: 992px) {
-                .cta-promo-img {
-                    right: 32px;
-                }
-            }
-            @media (min-width: 1200px) {
-                .cta-promo-img {
-                    right: 95px;
-                    transform: translateY(-70%);
-                }
-            }
-        </style>
         <section class="section py-7 dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="cta-promo p-5 px-4 px-lg-5 bg-img" style="background-image: url('img/promo-bg-01.png');">
