--- a/index.html
+++ b/index.html
@@ -327,15 +327,32 @@
         </section>
 
         <!-- CTA -->
-        <section class="section py-7 dark-mode bg-color-black color-white">
+        <section class="section py-7 dark-mode bg-color-black color-white overflow-hidden">
             <div class="container">
-                <div class="cta-promo p-5 px-4 px-lg-5 bg-img" style="background-image: url('img/promo-bg-01.png');">
+                <!-- <div class="cta-promo p-5 px-4 px-lg-5 bg-img" style="background-image: url('img/promo-bg-01.png');">
                     <div class="row gy-4 align-items-center">
                         <div class="col-lg-5 col-xl-6">
                             <p class="h1"><span class="d-block d-xl-inline">Рассрочка</span> на сайт!</p>
                         </div>
                         <div class="col-lg-3 col-xl-2">
                             <a class="btn btn-sale-2 fs-20 fs-lg-24" href="#">узнать</a>
+                        </div>
+                    </div>
+                    <img class="cta-promo-img" src="img/promo-img-01.png" alt="">
+                </div> -->
+                <div class="cta-promo p-4 px-4 px-lg-5 bg-img" style="background-image: url('img/promo-bg-01.png');">
+                    <div class="py-3">
+                        <div class="row align-items-center">
+                            <div class="col-md-7 col-lg-7">
+                                <div class="row gy-4 align-items-center">
+                                    <div class="col-md-auto">
+                                        <p class="h1 mb-0"><span class="d-block d-md-inline">Рассрочка</span> на сайт!</p>
+                                    </div>
+                                    <div class="col-md-auto ms-xxl-auto">
+                                        <a class="btn btn-sale-2 fs-20 fs-lg-24" href="#">узнать</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <img class="cta-promo-img" src="img/promo-img-01.png" alt="">
