--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                         <p class="h1 mb-0"><span class="d-block d-md-inline">Рассрочка</span> на сайт!</p>
                                     </div>
                                     <div class="col-md-auto ms-xxl-auto">
-                                        <a class="btn btn-sale-2 fs-20 fs-lg-24" href="#">узнать</a>
+                                        <a class="btn btn-sale-2 fs-20 fs-lg-24 mt-2" href="#">узнать</a>
                                     </div>
                                 </div>
                             </div>
