slider and banner fix

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                     <div class="col-md-8 col-lg-6">
                         <div class="d-flex align-items-center justify-content-center py-2 py-lg-3">
                             <span class="fs-24 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
-                            <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
+                            <a class="btn btn-sale-1 ms-4 mt-2" href="promotion.html">Узнать</a>
                         </div>
                     </div>
                     <div class="col">
@@ -338,13 +338,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-10">
+                    <div class="col-lg-12">
                         <div class="swiper testimonialSwiper">
                             <div class="swiper-wrapper mb-5">
                                 <div class="swiper-slide">
                                     <div class="row gy-4">
                                         <div class="col-md-3">
-                                            <img class="w-100" src="img/testimonial-01.png" alt="">
+                                            <img class="w-100" src="img/testimonial-01.jpeg" alt="">
                                         </div>
                                         <div class="col-md-9">
                                             <p class="fs-20 fs-lg-24">ОАО «Завод имени В.А. Дегтярева»</p>
@@ -361,7 +361,7 @@
                                 <div class="swiper-slide">
                                     <div class="row gy-4">
                                         <div class="col-md-3">
-                                            <img class="w-100" src="img/testimonial-01.png" alt="">
+                                            <img class="w-100" src="img/testimonial-01.jpeg" alt="">
                                         </div>
                                         <div class="col-md-9">
                                             <p class="fs-20 fs-lg-24">ОАО «Завод имени В.А. Дегтярева»</p>
@@ -378,7 +378,7 @@
                                 <div class="swiper-slide">
                                     <div class="row gy-4">
                                         <div class="col-md-3">
-                                            <img class="w-100" src="img/testimonial-01.png" alt="">
+                                            <img class="w-100" src="img/testimonial-01.jpeg" alt="">
                                         </div>
                                         <div class="col-md-9">
                                             <p class="fs-20 fs-lg-24">ОАО «Завод имени В.А. Дегтярева»</p>
