--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
                     <div class="col-md-8 col-lg-6">
                         <div class="d-flex align-items-center justify-content-center py-2 py-lg-3">
                             <span class="fs-24 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
-                            <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
+                            <a class="btn btn-sale-1 ms-4 mt-2" href="promotion.html">Узнать</a>
                         </div>
                     </div>
                     <div class="col">
