add slide change clients

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                             </a>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-icon btn-prev rounded-circle" id="heroSwiper-prev">
+                    <button type="button" class="btn btn-icon btn-prev rounded-circle m-2" id="heroSwiper-prev">
                         <i class="bx bx-chevron-left"></i>
                     </button>
-                    <button type="button" class="btn btn-icon btn-next rounded-circle" id="heroSwiper-next">
+                    <button type="button" class="btn btn-icon btn-next rounded-circle m-2" id="heroSwiper-next">
                         <i class="bx bx-chevron-right"></i>
                     </button>
                 </div>
@@ -475,15 +475,53 @@
                         <p class="fs-28 fs-lg-32">После</p>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center">
-                    <!-- Изображения для примера, в итоговом проекте НЕ ИСПОЛЬЗОВАТЬ -->
-                    <img-comparison-slider class="mx-n5 mx-xl-0">
-                        <img slot="first" src="img/before-01.jpg" alt="Before Mode">
-                        <img slot="second" src="img/after-01.jpg" alt="After Mode">
-                        <div slot="handle" class="img-comparison-slider--handle">
-                            <img src="img/handle.svg" alt="">
+                <div class="position-relative">
+                    <div class="swiper changeclientsSwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="d-flex justify-content-center">
+                                    <!-- Изображения для примера, в итоговом проекте НЕ ИСПОЛЬЗОВАТЬ -->
+                                    <img-comparison-slider class="mx-n5 mx-xl-0">
+                                        <img slot="first" src="img/before-01.jpg" alt="Before Mode">
+                                        <img slot="second" src="img/after-01.jpg" alt="After Mode">
+                                        <div slot="handle" class="img-comparison-slider--handle">
+                                            <img src="img/handle.svg" alt="">
+                                        </div>
+                                    </img-comparison-slider>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="d-flex justify-content-center">
+                                    <!-- Изображения для примера, в итоговом проекте НЕ ИСПОЛЬЗОВАТЬ -->
+                                    <img-comparison-slider class="mx-n5 mx-xl-0">
+                                        <img slot="first" src="img/before-01.jpg" alt="Before Mode">
+                                        <img slot="second" src="img/after-01.jpg" alt="After Mode">
+                                        <div slot="handle" class="img-comparison-slider--handle">
+                                            <img src="img/handle.svg" alt="">
+                                        </div>
+                                    </img-comparison-slider>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="d-flex justify-content-center">
+                                    <!-- Изображения для примера, в итоговом проекте НЕ ИСПОЛЬЗОВАТЬ -->
+                                    <img-comparison-slider class="mx-n5 mx-xl-0">
+                                        <img slot="first" src="img/before-01.jpg" alt="Before Mode">
+                                        <img slot="second" src="img/after-01.jpg" alt="After Mode">
+                                        <div slot="handle" class="img-comparison-slider--handle">
+                                            <img src="img/handle.svg" alt="">
+                                        </div>
+                                    </img-comparison-slider>
+                                </div>
+                            </div>
                         </div>
-                    </img-comparison-slider>
+                        <button type="button" class="btn btn-icon btn-prev rounded-circle m-2" id="changeclientsSwiper-prev">
+                            <i class="bx bx-chevron-left"></i>
+                        </button>
+                        <button type="button" class="btn btn-icon btn-next rounded-circle m-2" id="changeclientsSwiper-next">
+                            <i class="bx bx-chevron-right"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
