add spacing and fix bg price

--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
         </section>
 
         <!-- Цены на создание сайтов под ключ  -->
-        <section class="section py-5 dark-mode bg-color-black color-white bg-img bg-top-auto bg-lg-center-cover"
-            style="background-image: url(img/bg-price.png);">
+        <section class="section py-5 dark-mode bg-color-black color-white bg-img bg-top-auto"
+            style="background-image: url(img/bg-price.webp);">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
@@ -455,7 +455,7 @@
                 <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Экспресс-дизайн</span> от 3 500 руб. месяц</p>
                 <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Верстка одной страницы</span> от 3 500 руб. месяц</p>
                 <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Консультация специалиста</span> от 2 500 руб. месяц</p>
-                <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Продвижение</span> от 15 500 руб. месяц</p>
+                <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-0"><span class="h1 me-3 d-block d-lg-inline">Продвижение</span> от 15 500 руб. месяц</p>
             </div>
         </section>
 
@@ -544,6 +544,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="pb-5"></div>
             </div>
         </section>
 
