--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-md-8 col-lg-6">
                         <div class="d-flex align-items-center justify-content-center py-2 py-lg-3">
                             <span class="fs-24 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
-                            <a class="btn btn-sale-1 ms-4 mt-2" href="promotion.html">Узнать</a>
+                            <a class="btn btn-sale-1 btn-gradient btn-shadow-pulse ms-4 mt-2" href="promotion.html">Узнать</a>
                         </div>
                     </div>
                     <div class="col">
@@ -69,6 +69,10 @@
                                 <li class="nav-item"><a class="nav-link active" href="index.html">Создание сайтов</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
                                 <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
+                                <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
+                                <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
+                                <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                                 <!-- <li class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                         aria-current="page">Услуги</a>
@@ -78,10 +82,6 @@
                                         <li><a class="dropdown-item" href="#">Пункт 3</a></li>
                                     </ul>
                                 </li> -->
-                                <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
-                                <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                             </ul>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                             <h1 class="text-uppercase fw-bold mb-3">Разработка сайтов в Москве</h1>
                             <p class="fs-20 fs-lg-24">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque at nostrum voluptatum qui maiores placeat magni deserunt veniam laborum nesciunt sit corporis aut ut, excepturi eveniet assumenda dicta officia quo!</p>
                         </div>
-                        <a class="btn btn-primary btn-lg" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Связаться</a>
+                        <a class="btn btn-primary btn-gradient btn-lg" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Связаться</a>
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                                 earning rewards and saving money. But with hundreds of credit cards on the market.</p>
                         </div>
                         <div class="d-none d-lg-block">
-                            <a class="btn btn-secondary btn-lg mt-5" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Заказать</a>
+                            <a class="btn btn-primary btn-gradient btn-shadow-pulse btn-lg mt-5" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Заказать</a>
                         </div>
                     </div>
                     <div class="col-lg-5 offset-lg-1">
@@ -185,14 +185,14 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="blog-item.html" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Сайт-визитка</span> от 35
-                                                    900₽</a>
+                                                <span class="d-block d-lg-inline">Сайт-визитка</span> от 35 900₽
                                             </p>
                                             <div class="fw-light">
                                                 <p>The best credit cards offer some tantalizing combinations
                                                     of
                                                     promotions and prizes</p>
                                             </div>
+                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">А вот это интересненько!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -202,13 +202,14 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="blog-item.html" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Корпоративный</span> от 75
-                                                    900₽</a>
+                                                <span class="d-block d-lg-inline">Корпоративный</span> от 75
+                                                    900₽
                                             </p>
                                             <div class="fw-light">
                                                 <p>We take proactive steps make sure your information and
                                                     transactions are secure.</p>
                                             </div>
+                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Хочу так же! Сейчас же!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -218,14 +219,15 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="blog-item.html" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Интернет-магазин</span> от 120
-                                                    000₽</a>
+                                                <span class="d-block d-lg-inline">Интернет-магазин</span> от 120
+                                                    000₽
                                             </p>
                                             <div class="fw-light">
                                                 <p>The best credit cards offer some tantalizing combinations
                                                     of
                                                     promotions and prizes</p>
                                             </div>
+                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Дорого! Но интересно!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -235,14 +237,15 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="blog-item.html" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Сайт-визитка</span> от 35
-                                                    900₽</a>
+                                                <span class="d-block d-lg-inline">Сайт-визитка</span> от 35
+                                                    900₽
                                             </p>
                                             <div class="fw-light">
                                                 <p>The best credit cards offer some tantalizing combinations
                                                     of
                                                     promotions and prizes</p>
                                             </div>
+                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Интригующе, я такое люблю!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -252,13 +255,14 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="blog-item.html" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Корпоративный</span> от 75
-                                                    900₽</a>
+                                                <span class="d-block d-lg-inline">Корпоративный</span> от 75
+                                                    900₽
                                             </p>
                                             <div class="fw-light">
                                                 <p>We take proactive steps make sure your information and
                                                     transactions are secure.</p>
                                             </div>
+                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Вот это да! Люблю корпорации!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -268,14 +272,15 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="blog-item.html" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Интернет-магазин</span> от 120
-                                                    000₽</a>
+                                                <span class="d-block d-lg-inline">Интернет-магазин</span> от 120
+                                                    000₽
                                             </p>
                                             <div class="fw-light">
                                                 <p>The best credit cards offer some tantalizing combinations
                                                     of
                                                     promotions and prizes</p>
                                             </div>
+                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Хочу у себя такой!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -338,7 +343,7 @@
                                         <p class="h1 mb-0"><span class="d-block d-md-inline">Рассрочка</span> на сайт!</p>
                                     </div>
                                     <div class="col-md-auto ms-xxl-auto">
-                                        <a class="btn btn-sale-2 fs-20 fs-lg-24 mt-2" href="#">узнать</a>
+                                        <a class="btn btn-sale-2 btn-gradient btn-shadow-pulse fs-20 fs-lg-24 mt-2" href="#">Узнать</a>
                                     </div>
                                 </div>
                             </div>
@@ -350,8 +355,7 @@
         </section>
 
         <!-- Цены на создание сайтов под ключ  -->
-        <section class="section py-5 dark-mode bg-color-black color-white bg-img bg-top-auto"
-            style="background-image: url(img/bg-price.webp);">
+        <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
@@ -360,7 +364,7 @@
                 </div>
                 <div class="row gy-4">
                     <div class="col-lg-4">
-                        <div class="card card-pricing h-100">
+                        <div class="card card-pricing h-100 border-0" style="background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);">
                             <div class="card-body pb-0">
                                 <div class="text-center">
                                     <p class="fs-28 fs-lg-32 fw-bold">Тариф<br> «Минимальный»</p>
@@ -378,12 +382,12 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 2 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary btn-lg w-100 w-lg-auto mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-primary btn-gradient btn-shadow-pulse btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="card card-pricing h-100">
+                        <div class="card card-pricing h-100 border-0" style="background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);">
                             <div class="card-body pb-0">
                                 <div class="text-center">
                                     <p class="fs-28 fs-lg-32 fw-bold">Тариф<br> «Средний»</p>
@@ -406,12 +410,12 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 5 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary btn-lg w-100 w-lg-auto mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-primary btn-gradient btn-shadow-pulse btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="card card-pricing h-100">
+                        <div class="card card-pricing h-100 border-0" style="background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);">
                             <div class="card-body pb-0">
                                 <div class="text-center">
                                     <p class="fs-28 fs-lg-32 fw-bold">Тариф<br> «Максимальный»</p>
@@ -439,7 +443,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 10 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary btn-lg w-100 w-lg-auto mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-primary btn-gradient btn-shadow-pulse btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -539,7 +543,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 text-lg-end">
-                            <a class="btn btn-primary btn-lg w-100 w-lg-auto" href="#mainForm" data-bs-toggle="modal"
+                            <a class="btn btn-primary btn-gradient btn-shadow-pulse btn-lg" href="#mainForm" data-bs-toggle="modal"
                                 data-bs-target="#mainForm">Оставить заявку</a>
                         </div>
                     </div>
@@ -733,7 +737,7 @@
                             <!-- У кнопки type="button" ТОЛЬКО ДЛЯ ДЕМОНСТРАЦИИ открытия окна "Спасибо"!!! -->
                             <!-- ......... Само собой у кнопки в форме должно быть type="submit" ......... -->
                             <!-- ......................................................................... -->
-                            <button type="button" class="btn btn-primary" data-bs-target="#mainThank"
+                            <button type="button" class="btn btn-primary btn-gradient" data-bs-target="#mainThank"
                                 data-bs-toggle="modal">Оставить заявку</button>
                         </div>
                     </form>
