--- a/shop-item.html
+++ b/shop-item.html
@@ -31,7 +31,7 @@
                     <div class="col-md-8 col-lg-6">
                         <div class="d-flex align-items-center justify-content-center py-2 py-lg-3">
                             <span class="fs-24 fs-lg-32 text-uppercase color-white">Акции месяца!</span>
-                            <a class="btn btn-sale-1 ms-4 mt-2" href="promotion.html">Узнать</a>
+                            <a class="btn btn-sale-1 btn-gradient btn-shadow-pulse ms-4 mt-2" href="promotion.html">Узнать</a>
                         </div>
                     </div>
                     <div class="col">
@@ -69,6 +69,10 @@
                                 <li class="nav-item"><a class="nav-link" href="index.html">Создание сайтов</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
                                 <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
+                                <li class="nav-item"><a class="nav-link active" href="shop.html">Шаблоны</a></li>
+                                <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
+                                <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                                 <!-- <li class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                         aria-current="page">Услуги</a>
@@ -78,10 +82,6 @@
                                         <li><a class="dropdown-item" href="#">Пункт 3</a></li>
                                     </ul>
                                 </li> -->
-                                <li class="nav-item"><a class="nav-link active" href="shop.html">Шаблоны</a></li>
-                                <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                             </ul>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
                             <div class="row gy-3 py-5">
                                 <div class="col-md-6">
-                                    <a class="btn btn-primary btn-lg w-100" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Купить</a>
+                                    <a class="btn btn-primary btn-gradient btn-lg w-100" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Купить</a>
                                 </div>
                                 <div class="col-md-6">
                                     <a class="btn btn-outline btn-lg w-100" href="#">Демо</a>
@@ -164,7 +164,7 @@
                                 <div class="card-footer">
                                     <div class="row gy-2">
                                         <div class="col-lg-12">
-                                            <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                            <a class="btn btn-primary btn-gradient w-100" href="shop-item.html">Подробнее</a>
                                         </div>
                                         <div class="col-lg-12">
                                             <a class="btn btn-outline w-100" href="#">Демо</a>
@@ -189,7 +189,7 @@
                                 <div class="card-footer">
                                     <div class="row gy-2">
                                         <div class="col-lg-12">
-                                            <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                            <a class="btn btn-primary btn-gradient w-100" href="shop-item.html">Подробнее</a>
                                         </div>
                                         <div class="col-lg-12">
                                             <a class="btn btn-outline w-100" href="#">Демо</a>
@@ -214,7 +214,7 @@
                                 <div class="card-footer">
                                     <div class="row gy-2">
                                         <div class="col-lg-12">
-                                            <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                            <a class="btn btn-primary btn-gradient w-100" href="shop-item.html">Подробнее</a>
                                         </div>
                                         <div class="col-lg-12">
                                             <a class="btn btn-outline w-100" href="#">Демо</a>
@@ -239,7 +239,7 @@
                                 <div class="card-footer">
                                     <div class="row gy-2">
                                         <div class="col-lg-12">
-                                            <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                            <a class="btn btn-primary btn-gradient w-100" href="shop-item.html">Подробнее</a>
                                         </div>
                                         <div class="col-lg-12">
                                             <a class="btn btn-outline w-100" href="#">Демо</a>
@@ -359,7 +359,7 @@
                             <!-- У кнопки type="button" ТОЛЬКО ДЛЯ ДЕМОНСТРАЦИИ открытия окна "Спасибо"!!! -->
                             <!-- ......... Само собой у кнопки в форме должно быть type="submit" ......... -->
                             <!-- ......................................................................... -->
-                            <button type="button" class="btn btn-primary" data-bs-target="#mainThank"
+                            <button type="button" class="btn btn-primary btn-gradient" data-bs-target="#mainThank"
                                 data-bs-toggle="modal">Оставить заявку</button>
                         </div>
                     </form>
