gradient text add

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                                     of
                                                     promotions and prizes</p>
                                             </div>
-                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">А вот это интересненько!</a>
+                                            <a class="stretched-link text-decoration-none color-blue text-gradient-animation fw-600 py-2" href="#">А вот это интересненько!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -209,7 +209,7 @@
                                                 <p>We take proactive steps make sure your information and
                                                     transactions are secure.</p>
                                             </div>
-                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Хочу так же! Сейчас же!</a>
+                                            <a class="stretched-link text-decoration-none color-blue text-gradient-animation fw-600 py-2" href="#">Хочу так же! Сейчас же!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -227,7 +227,7 @@
                                                     of
                                                     promotions and prizes</p>
                                             </div>
-                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Дорого! Но интересно!</a>
+                                            <a class="stretched-link text-decoration-none color-blue text-gradient-animation fw-600 py-2" href="#">Дорого! Но интересно!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -245,7 +245,7 @@
                                                     of
                                                     promotions and prizes</p>
                                             </div>
-                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Интригующе, я такое люблю!</a>
+                                            <a class="stretched-link text-decoration-none color-blue text-gradient-animation fw-600 py-2" href="#">Интригующе, я такое люблю!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -262,7 +262,7 @@
                                                 <p>We take proactive steps make sure your information and
                                                     transactions are secure.</p>
                                             </div>
-                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Вот это да! Люблю корпорации!</a>
+                                            <a class="stretched-link text-decoration-none color-blue text-gradient-animation fw-600 py-2" href="#">Вот это да! Люблю корпорации!</a>
                                         </div>
                                     </article>
                                 </div>
@@ -280,7 +280,7 @@
                                                     of
                                                     promotions and prizes</p>
                                             </div>
-                                            <a class="stretched-link text-decoration-none color-blue fw-600" href="#">Хочу у себя такой!</a>
+                                            <a class="stretched-link text-decoration-none color-blue text-gradient-animation fw-600 py-2" href="#">Хочу у себя такой!</a>
                                         </div>
                                     </article>
                                 </div>
