--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                                     planet.</p>
                             </div>
                         </div>
-                        <div class="col-lg-4 text-lg-end">
+                        <div class="col-lg-4 text-center text-lg-end">
                             <a class="btn btn-primary btn-gradient btn-shadow-pulse btn-lg" href="#mainForm" data-bs-toggle="modal"
                                 data-bs-target="#mainForm">Оставить заявку</a>
                         </div>
